Adjusted the padding and margin of the dropdown content to prevent unwanted extra spaces caused by p, the child element of dropdown-content. Learned about how to keep the child element under its parent element by clipping itself inside parent, using overflow: hidden

--- a/style.css
+++ b/style.css
@@ -225,35 +225,47 @@ body {
     font-size: 30px;
     color: #ffffff;
 }
-/* for drop-down style */
+/* -------for drop-down style------- */
+
 #project-icon {
     position: relative;
     display: inline-block;
 }
 .dropdown-content {
+    font-family: "IM Fell DW Pica", serif;
     position: absolute;
-    top: 100%;
-    left: 0;
+    right: 100%;
+    
     background: white;
-    /* color: ; */
-    min-width: 120px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-    opacity: 0;
-    transform: translateY(-10px);
-    transition: all 0.3s;
-    pointer-events: none;
+    transform: translateX(10%) translateY(-10%);
+    width: auto;
     border-radius: 0.5rem;
+    z-index: 100;
+    overflow: hidden; /* to crop the child element's overflow, specifically the sharp border corners of the p element on hover */
+    box-shadow: 0px 2px 5px hsla(0, 0%, 0%, 0.2);
+    transition:  0.3s ease;
+
+/* hiding state*/
+    opacity: 0;
+    pointer-events: none;
+
+    /* for the delaying the dropdown dissapearance */
+    transition: opacity 0.3s ease 0.4s, transform 0.3s ease 0.4s; /*2s transition-delay*/
 }
 #project-icon:hover .dropdown-content {
     opacity: 1;
-    transform: translateY(0);
     pointer-events: auto;
+
+    /*to override the delay so to remove the delay while appearing*/
+    transition: opacity 0.3s ease 0s, transform 0.3s ease 0s;
 }
 .dropdown-content p {
+    font-size: 1rem;
     color:#000000;
-    padding: 0.5rem 1rem;
+    padding: 1rem 1rem;
     text-decoration: #96ff6c;
     display: block;
+    margin: 0;
 }
 .dropdown-content p:hover {
     background-color: #68c43e;
